--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 
             </div>
             <div class="fourth-right">
-                <video controls src="netflix-video4.m4v" autoplay loop style="position: absolute; width: 23%;margin-left: 105px;margin-top: 98px;background-size: cover;"></video>
+                <video  src="netflix-video4.m4v" autoplay loop style="position: absolute; width: 23%;margin-left: 105px;margin-top: 98px;background-size: cover;"></video>
                 <img src="netflix-img4.png" alt="" style="position: relative;width: 76%;margin-top: 70px;">
 
                 
